--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
     </form>
   </div>
 
+  <!-- NEW SECTION: Table to show all bookings -->
+    <div class="container" id="admin-view" style="margin-top: 30px;">
+        <h2>All Bookings</h2>
+        <table id="bookings-table" style="width:100%; border-collapse: collapse;">
+        <thead>
+            <tr>
+            <th style="border-bottom: 2px solid navy; padding: 10px;">Name</th>
+            <th style="border-bottom: 2px solid navy; padding: 10px;">Time</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- New bookings will appear here -->
+        </tbody>
+        </table>
+    </div>
+
   <!-- Firebase Scripts -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
