admin file added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </div>
       <button type="submit" id="submit-button">Submit</button>
     </form>
+    <button onclick="window.location.href='admin.html'" id="admin-button" style="margin-top:20px;">Admin Login</button>
   </div>
 
   <!-- NEW SECTION: Table to show all bookings -->
