minor tweaks fixed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <form id="signup-form">
       <input type="text" id="name" placeholder="Enter your name" required />
       <div id="calendar">
-        <h2>Class: Friday</h2>
+        <h2 id="class-date">Class: Friday</h2>
         <div id="timeslots"></div>
       </div>
       <button type="submit" id="submit-button">Submit</button>
