--- a/admin.html
+++ b/admin.html
@@ -12,14 +12,21 @@
       <input type="text" id="admin-username" placeholder="Username" required />
       <input type="password" id="admin-password" placeholder="Password" required />
       <button type="submit" id="login-button">Login</button>
+      <button id="back-button-login" style="margin-top: 20px;">Back</button>
+
     </form>
+
 
     <div id="admin-actions" style="display:none;">
       <h2>Reset Submissions and Set New Class Date</h2>
       <input type="text" id="new-class-date" placeholder="e.g., Friday, May 3" required />
       <button id="reset-button">Reset and Set New Date</button>
+      <button id="back-button" style="margin-top: 20px;">Back</button>
     </div>
   </div>
+
+
+
 
   <!-- Firebase + Admin Script -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
