--- a/admin.html
+++ b/admin.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Panel - Quran Class</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
     <h1>Admin Panel</h1>
-    <form id="login-form">
+
+    <!-- Login Form -->
+    <form id="login-form" class="form-group">
       <input type="text" id="admin-username" placeholder="Username" required />
       <input type="password" id="admin-password" placeholder="Password" required />
-      <button type="submit" id="login-button">Login</button>
-      <button id="back-button-login" style="margin-top: 20px;">Back</button>
-
+      <div class="button-group">
+        <button type="submit" id="login-button">Login</button>
+        <button type="button" id="back-button-login">Back</button>
+      </div>
     </form>
 
-
-    <div id="admin-actions" style="display:none;">
+    <!-- Admin Actions -->
+    <div id="admin-actions" class="form-group" style="display:none;">
       <h2>Reset Submissions and Set New Class Date</h2>
       <input type="text" id="new-class-date" placeholder="e.g., Friday, May 3" required />
-      <button id="reset-button">Reset and Set New Date</button>
-      <button id="back-button" style="margin-top: 20px;">Back</button>
+      <div class="button-group">
+        <button type="button" id="reset-button">Reset</button>
+        <button type="button" id="back-button">Back</button>
+      </div>
     </div>
   </div>
-
-
-
 
   <!-- Firebase + Admin Script -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
